--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,525 @@
-.App {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   @mixin ========================================================================= */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
 }
 
-.box {
-  font-family: "PT Serif", serif;
+/* Sections
+   @mixin ========================================================================= */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
 }
 
-.quiet {
-  font-weight: 500;
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
 }
 
-/*# sourceMappingURL=index.css.map */
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   @mixin ========================================================================= */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/* Text-level semantics
+   @mixin ========================================================================= */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   @mixin ========================================================================= */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   @mixin ========================================================================= */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+/* Interactive
+   @mixin ========================================================================= */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   @mixin ========================================================================= */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+body {
+  font-family: gitan-latin, sans-serif;
+}
+
+a,
+a:visited,
+a:hover {
+  color: #00087c;
+  transition: all .2s ease-in-out;
+}
+
+.meat a {
+  background: pink;
+}
+
+.meat a:hover {
+  background: #fff3f5;
+  text-decoration: none;
+}
+
+.banner a {
+  text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: filson-pro, sans-serif;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 2rem 0 1rem;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+h4, h5, h6 {
+  font-size: 1.4rem;
+}
+
+blockquote {
+  font-family: filson-pro, sans-serif;
+  margin-top: 1rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  text-align: justify;
+}
+
+.girdle {
+  margin: 0 auto;
+  max-width: 46.875em;
+}
+
+.banner {
+  padding: 10rem 0;
+  background: #6358ff;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.meat {
+  padding: 5rem 0 10rem;
+  background: rgba(255, 255, 255, 0.8);
+  color: #6358ff;
+}
+
+p,
+li,
+dt,
+dd {
+  font-size: 1.125rem;
+}
+
+p {
+  line-height: 1.7;
+  margin: 0;
+}
+
+p + p {
+  text-indent: 2rem;
+}
+
+dt {
+  font-family: filson-pro, sans-serif;
+}
+
+ul,
+ol,
+dl {
+  margin: 1rem 0;
+}
+
+ul,
+ol {
+  padding: 0 0 0 2rem;
+}
+
+dt {
+  padding-top: 1rem;
+}
+
+dd {
+  margin: 0;
+}
+
+.top-nav,
+.second-nav {
+  list-style: none;
+  padding: 0;
+  position: fixed;
+  text-align: center;
+}
+
+.top-nav li,
+.second-nav li {
+  display: inline-block;
+}
+
+.second-nav {
+  bottom: 0;
+  right: 0;
+  writing-mode: vertical-lr;
+}
+
+.second-nav li {
+  padding: 1rem .5rem;
+}
+
+.top-nav {
+  background: rgba(255, 255, 255, 0.8);
+  left: 0;
+  right: 0;
+  top: 0;
+  transition: all 0.25s ease-out;
+  transform: translateY(0);
+}
+
+.top-nav li {
+  padding: 1rem 3rem;
+}
+
+.hide-nav .top-nav {
+  opacity: 0;
+  transform: translateY(-100%);
+}
+
+.nav-item {
+  text-transform: uppercase;
+}
+
+.card {
+  border: 1px solid rgba(0, 8, 124, 0.2);
+  border-bottom: 0.2rem solid #00087c;
+  box-shadow: 0 1rem 4rem rgba(0, 8, 124, 0.05);
+  padding: 0 2rem 2rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+
+.card + .card {
+  margin-top: 3rem;
+}
+
+.card-logo {
+  float: right;
+  margin: 2rem 0rem 2rem 2rem;
+  max-width: 8.75em;
+}
+
+mark {
+  background: lightgoldenrodyellow;
+}
+
+.active {
+  background: pink;
+  color: red;
+}
+
+.story-covers {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+
+.story-covers > li {
+  text-align: center;
+  flex-grow: 4;
+  font-size: 3ch;
+}
+
+.story-covers > li a {
+  border: 1rem double pink;
+  display: block;
+  background: pink;
+  padding: 6rem 3vw;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.story-covers > li a:hover {
+  border: 1rem double pink;
+  background: #00087c;
+  color: white;
+  text-decoration: none;
+}
