Adding CV images

--- a/src/css/sass/_base.sass
+++ b/src/css/sass/_base.sass
@@ -24,25 +24,27 @@
 // font-style: italic
 body
   font-family: $longform
+  color: $_ink
+a,
+a:visited
+  text-decoration: .2rem underline #00087c
 a,
 a:visited,
 a:hover
   color: $_ink
   transition: all .2s ease-in-out
-.meat a
-  background: pink
-  &:hover
-    background: lighten(pink, 10%)
-    text-decoration: none
+.meat a:hover
+  text-decoration: .2rem underline wavy #00087c
 .banner a
   text-decoration: underline
 // ————————————————————————————————————————
 // Headings (only use h1-h4)
 h1,h2,h3,h4,h5,h6
   font-family: $headings
-  font-weight: 700
   line-height: 1.2
   margin: 2rem 0 1rem
+h1,h2,h3
+  font-weight: 700
 h1
   font-size: 3rem
 h2
@@ -50,7 +52,9 @@ h2
 h3
   font-size: 1.6rem
 h4,h5,h6
-  font-size: 1.4rem
+  font-weight: 500
+  font-size: pxToRem(19)
+  color: $_ink
 blockquote
   font-family: $headings
   margin-top: 1rem
@@ -61,22 +65,20 @@ blockquote
 // Main Layout
 .girdle
   margin: 0 auto
-  max-width: (750 / $rem) + em
+  max-width: pxToRem(750)
+  padding: 0 1vw 0 5vw
 .banner
   padding: 10rem 0
-  background: $blue
   color: $white
 .meat
   padding: 5rem 0 10rem
-  background: $white
-  color: $blue
 // ————————————————————————————————————————
 // Paragraphs
 p,
 li,
 dt,
 dd
-  font-size: (18 / $rem) * 1 + rem
+  font-size: pxToRem(16)
 p
   line-height: 1.7
   margin: 0
@@ -84,6 +86,8 @@ p + p
   text-indent: 2rem
 dt
   font-family: $headings
+p, dd
+  color: #00087c
 // ————————————————————————————————————————
 // Lists
 ul,
@@ -129,20 +133,25 @@ dd
 .nav-item
   text-transform: uppercase
 .card
-  border: 1px solid rgba($_ink, 0.2)
-  border-bottom: 0.2rem solid $_ink
-  box-shadow: 0 1rem 4rem rgba($_ink, 0.05)
+  background: white
+  border-width: 1px 0 0 0
+  border-style: solid
+  border-color: rgba($_ink, 0.2)
+  border-bottom: .2rem solid $_ink
   padding: 0 2rem 2rem
-  display: inline-flex
-  justify-content: center
-  align-items: center
-  flex-flow: column
+  position: relative
   & + &
     margin-top: 3rem
+  .year
+    @extend h6
+    position: absolute
+    top: -.75rem
+    background: white
+    margin: 0
 .card-logo
   float: right
   margin: 2rem 0rem 2rem 2rem
-  max-width: (140 / $rem) + em
+  max-width: pxToRem(100)
 mark
   background: lightgoldenrodyellow
 .active
