--- a/src/css/sass/_variables.sass
+++ b/src/css/sass/_variables.sass
@@ -6,9 +6,12 @@ $_ink: rgb(0, 8, 124)
 $white: rgba(255, 255, 255, 0.8)
 
 // Fonts
-$longform: gitan-latin, sans-serif
-$headings: filson-pro, sans-serif
+$longform: 'Libre Franklin', sans-serif
+$headings: 'Libre Franklin', sans-serif
 
 =ucs($space)
     text-transform: uppercase
     letter-spacing: $space
+
+@function pxToRem($px)
+  @return ($px/$rem) + rem
