--- a/src/css/index.css
+++ b/src/css/index.css
@@ -310,7 +310,13 @@ template {
 }
 
 body {
-  font-family: gitan-latin, sans-serif;
+  font-family: "Libre Franklin", sans-serif;
+  color: #00087c;
+}
+
+a,
+a:visited {
+  text-decoration: .2rem underline #00087c;
 }
 
 a,
@@ -320,24 +326,22 @@ a:hover {
   transition: all .2s ease-in-out;
 }
 
-.meat a {
-  background: pink;
-}
-
 .meat a:hover {
-  background: #fff3f5;
-  text-decoration: none;
+  text-decoration: .2rem underline wavy #00087c;
 }
 
 .banner a {
   text-decoration: underline;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: filson-pro, sans-serif;
-  font-weight: 700;
+h1, h2, h3, h4, h5, h6, .card .year {
+  font-family: "Libre Franklin", sans-serif;
   line-height: 1.2;
   margin: 2rem 0 1rem;
+}
+
+h1, h2, h3 {
+  font-weight: 700;
 }
 
 h1 {
@@ -352,12 +356,14 @@ h3 {
   font-size: 1.6rem;
 }
 
-h4, h5, h6 {
-  font-size: 1.4rem;
+h4, h5, h6, .card .year {
+  font-weight: 500;
+  font-size: 1.1875rem;
+  color: #00087c;
 }
 
 blockquote {
-  font-family: filson-pro, sans-serif;
+  font-family: "Libre Franklin", sans-serif;
   margin-top: 1rem;
   margin-left: 3rem;
   margin-right: 3rem;
@@ -366,26 +372,24 @@ blockquote {
 
 .girdle {
   margin: 0 auto;
-  max-width: 46.875em;
+  max-width: 46.875rem;
+  padding: 0 1vw 0 5vw;
 }
 
 .banner {
   padding: 10rem 0;
-  background: #6358ff;
   color: rgba(255, 255, 255, 0.8);
 }
 
 .meat {
   padding: 5rem 0 10rem;
-  background: rgba(255, 255, 255, 0.8);
-  color: #6358ff;
 }
 
 p,
 li,
 dt,
 dd {
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 
 p {
@@ -398,7 +402,11 @@ p + p {
 }
 
 dt {
-  font-family: filson-pro, sans-serif;
+  font-family: "Libre Franklin", sans-serif;
+}
+
+p, dd {
+  color: #00087c;
 }
 
 ul,
@@ -466,24 +474,30 @@ dd {
 }
 
 .card {
-  border: 1px solid rgba(0, 8, 124, 0.2);
+  background: white;
+  border-width: 1px 0 0 0;
+  border-style: solid;
+  border-color: rgba(0, 8, 124, 0.2);
   border-bottom: 0.2rem solid #00087c;
-  box-shadow: 0 1rem 4rem rgba(0, 8, 124, 0.05);
   padding: 0 2rem 2rem;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column;
+  position: relative;
 }
 
 .card + .card {
   margin-top: 3rem;
 }
 
+.card .year {
+  position: absolute;
+  top: -.75rem;
+  background: white;
+  margin: 0;
+}
+
 .card-logo {
   float: right;
   margin: 2rem 0rem 2rem 2rem;
-  max-width: 8.75em;
+  max-width: 6.25rem;
 }
 
 mark {
